adaptive header&burger menu

--- a/src/markup/pages/index.pug
+++ b/src/markup/pages/index.pug
@@ -5,3 +5,5 @@ block variables
     - const pageDescription = "Gulp сборка для продуктивной верстки";
     - const pageLink = "";
 
+block content 
+    p Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda iusto facilis cupiditate fuga beatae non eligendi at fugit blanditiis natus?
