--- a/src/markup/parts/default/_header.pug
+++ b/src/markup/parts/default/_header.pug
@@ -1,4 +1,4 @@
-header.header
+header.header(data-js-header)
     div.header__promo
         div.container.header__promo-inner
             a.header__promo-link(href="/")
@@ -9,7 +9,7 @@ header.header
         div.header__body-inner.container
             a.logo.header__logo(href="", title="Home", aria-label="Home")
                 img.logo__image(src='img/logo.svg', width="179", height="50", alt="")
-            div.header__overlay
+            div.header__overlay(data-js-header-overlay)
                 nav.header__menu
                     ul.header__menu-list 
                         li.header__menu-item 
