--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,3 +11,11 @@
 @use 'blocks/button';
 @use 'blocks/burger-button';
 @use 'blocks/header';
+
+@use './blocks/badge';
+@use './blocks/soc1als';
+@use './blocks/footer';
+
+// .header {
+//     display: none !important;
+// }
