Add hero section fix

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,7 +22,7 @@
 @use './blocks/hero/advantage-card';
 @use './blocks/hero/hero';
 
-.header,
-.footer {
-    display: none !important;
-}
+// .header,
+// .footer {
+//     display: none !important;
+// }
