--- a/src/markup/parts/_head.pug
+++ b/src/markup/parts/_head.pug
@@ -26,12 +26,11 @@ noscript
   link(rel="stylesheet", href="css/main.css?v=" + version)
 
 //- Шрифты
-link(rel="preload", as="font", href="fonts/roboto/roboto-regular.woff2", type="font/woff2", crossorigin="anonymous")
-link(rel="preload", as="font", href="fonts/roboto/roboto-medium.woff2", type="font/woff2", crossorigin="anonymous")
-link(rel="preload", as="font", href="fonts/oswald/Oswaldregular.woff2", type="font/woff2", crossorigin="anonymous")
-link(rel="preload", as="font", href="fonts/oswald/Oswaldmedium.woff2", type="font/woff2", crossorigin="anonymous")
-link(rel="preload", as="font", href="fonts/oswald/Oswalddemibold.woff2", type="font/woff2", crossorigin="anonymous")
-link(rel="preload", as="font", href="fonts/oswald/Oswaldbold.woff2", type="font/woff2", crossorigin="anonymous")
+link(rel="preload", as="font", href="fonts/Inter-Regular.woff2", type="font/woff2", crossorigin="anonymous")
+link(rel="preload", as="font", href="fonts/Inter-Medium.woff2", type="font/woff2", crossorigin="anonymous")
+link(rel="preload", as="font", href="fonts/Inter-Bold.woff2", type="font/woff2", crossorigin="anonymous")
+link(rel="preload", as="font", href="fonts/Inter-SemiBold.woff2", type="font/woff2", crossorigin="anonymous")
+link(rel="preload", as="font", href="fonts/KumbhSans-Regular.woff2", type="font/woff2", crossorigin="anonymous")
 
 //- Стилизация интерфейса устройства пользователя
 meta(name="theme-color", content=themeColor)
